# water-quality-project

./: .gitignore  README.md  main1.py  pyproject.toml
notebooks/: eda_water_potability.ipynb  modeling_water_potability.ipynb  preprocessing_water_potability.ipynb
src/water_quality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
